--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -94,3 +94,7 @@ a {
     position: absolute;
     left: 0;
 }
+
+.graph-container {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 0.1875rem 0.5rem;
+}
