--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,4 +2,10 @@
     @media only screen and (max-width: 768px) {
       @content;
     }
-  }
+}
+
+@mixin MediaQueryTablet {
+    @media only screen and (max-width: 1080px) {
+      @content;
+    }
+}
